--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,115 @@
+/* Google Icon */
 .material-symbols-outlined {
     font-variation-settings:
         'FILL' 1,
         'wght' 400,
         'GRAD' 0,
         'opsz' 48
+}
+
+html {
+    scroll-behavior: smooth;
+    transition: all 500ms;
+}
+
+body {
+    font-family: sans-serif;
+    background-color: #0F0F0F;
+    width: 1000px;
+    margin: auto;
+    padding: 0;
+    color: white;
+}
+
+.note-app h1 {
+    text-align: center;
+}
+
+.note-app h2 {
+    margin-left: 16px;
+}
+
+.note-input {
+    border: darkslategrey solid 3px;
+    padding: 16px;
+    margin: 16px;
+    border-radius: 8px;
+}
+
+.note-input input {
+    font-family: sans-serif;
+    display: block;
+    width: 75%;
+    height: fit-content;
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 5px;
+    border-radius: 8px;
+    background-color: darkslategrey;
+    border-color: transparent;
+    color: white;
+}
+
+.note-input input::placeholder {
+    color: lightslategrey;
+}
+
+.note-input textarea {
+    font-family: sans-serif;
+    display: block;
+    width: 75%;
+    height: 100px;
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 5px;
+    border-radius: 8px;
+    background-color: darkslategrey;
+    border-color: transparent;
+    color: white;
+}
+
+.note-input textarea::placeholder {
+    color: lightslategrey;
+}
+
+.note-input button {
+    display: flex;
+    background-color: grey;
+    color: whitesmoke;
+    font-weight: bold;
+    padding: 8px 25px;
+    cursor: pointer;
+    border-radius: 8px;
+    border: 0;
+    margin: auto;
+}
+
+.note-item {
+    border: darkslategrey solid 3px;
+    border-radius: 8px;
+    padding: 0px 16px;
+    margin: 16px;
+}
+
+.note-item__title {
+    border-bottom: darkslategrey solid 3px;
+    padding-bottom: 8px;
+}
+
+.note-item__delete {
+    color: white;
+    background-color: red;
+    border-radius: 8px;
+    padding: 8px 10px;
+    margin-bottom: 8px;
+    text-align: center;
+    cursor: pointer;
+}
+
+@media only screen and (max-width: 1028px) {
+    body {
+        width: 100%;
+    }
 }
