--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -10,19 +10,63 @@
 html {
     scroll-behavior: smooth;
     transition: all 500ms;
+    scroll-padding-top: 6em;
 }
 
 body {
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
     background-color: #0F0F0F;
-    width: 1000px;
-    margin: auto;
+    margin: 0;
     padding: 0;
     color: white;
 }
 
-.note-app h1 {
+header {
+    display: inline;
+}
+
+main {
+    width: 1000px;
+    margin: auto;
+}
+
+nav {
+    background-color: white;
+    position: sticky;
+    top: 0;
+    margin: 0;
+    overflow: auto;
+}
+
+nav ul {
+    display: flex;
+    padding: 0;
+    margin: 0;
+    justify-content: space-evenly;
+}
+
+nav li {
+    display: inline;
+    list-style-type: none;
     text-align: center;
+}
+
+nav a {
+    color: black;
+    text-decoration: none;
+}
+
+nav a:hover {
+    color: slategrey;
+    font-weight: bold;
+}
+
+.note-app h1 {
+    color: white;
+    text-align: center;
+    background-color: darkslategrey;
+    margin: 0;
+    padding: 8px;
 }
 
 .note-app h2 {
@@ -109,7 +153,7 @@ body {
 }
 
 @media only screen and (max-width: 1028px) {
-    body {
+    main {
         width: 100%;
     }
 }
