--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -128,6 +128,7 @@ nav a:hover {
     border-radius: 8px;
     border: 0;
     margin: auto;
+    transition: all 250ms;
 }
 
 .note-input button:hover {
